2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* subr.el (with-selected-frame): Mention that the selected frame
	is restored (bug#9980).

	* ibuffer.el (ibuffer-mode): List the bindings in the corrent map
	(bug#9759).

	* mail/smtpmail.el (password-cache-add): Removed unused declaration.
	(password-read): Don't autoload unused function.

2012-01-07  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/which-func.el (which-func-mode): Turn into a
	non-interactive function and mark as obsolete (bug#10428).

2012-01-06  Chong Yidong  <cyd@gnu.org>

	* files.el (hack-dir-local-variables-non-file-buffer): Add doc.
	(hack-one-local-variable-eval-safep): Allow 0 arg for minor mode
	functions, along with 1 and -1.

2012-01-06  Eli Zaretskii  <eliz@gnu.org>

	* time.el (display-time-load-average)
	(display-time-default-load-average): Doc fixes.  See the thread
	starting at
	http://lists.gnu.org/archive/html/help-gnu-emacs/2012-01/msg00059.html
	for the details.

2012-01-06  Glenn Morris  <rgm@gnu.org>

	* mail/unrmail.el (unrmail): Give an explicit error if the input file
	has no messages.  (Bug#10377)

	* info.el (Info-mode-map): Bind e to end-of-buffer, rather
	than Info-edit.  (Bug#10385)

	* time.el (display-time-load-average, display-time-next-load-average):
	Doc fixes.

	* emacs-lisp/bytecomp.el (byte-compile-file): Do not propagate a file
	local setting of buffer-read-only to the input buffer.  (Bug#10419)

	* calendar/calendar.el (calendar-mode):
	Locally set scroll-margin to 0.  (Bug#10379)

2012-01-06  Ulrich Mueller  <ulm@gentoo.org>

	* play/doctor.el (doctor-death): Escape "," characters.  (Bug#10370)

2012-01-05  Glenn Morris  <rgm@gnu.org>

	* eshell/em-unix.el (diff-no-select): Autoload it.
	(eshell/diff): Use diff-no-select.  (Bug#10420)

2012-01-05  Chong Yidong  <cyd@gnu.org>

	* shell.el (shell-dynamic-complete-functions): Revert last change.
	(shell-command-completion-function): New function.
	(shell-completion-vars): Use it to implement